packages/components/src/components/navigation/sidebar/sidebar-item.scss
@use "@infineon/design-system-tokens/dist/tokens";

:host {
  position: relative;
  display: block;
}

:host([data-has-icon="false"]) {
  display: var(--ifx-sidebar-item-without-icon-display, block);
}

.sidebar__nav-item,
.sidebar__nav-item.header__section {
  &:focus-visible {
      outline: none;
      box-shadow: 0 0 0 2px tokens.$ifxColorBaseWhite, 0 0 0 4px tokens.$ifxColorOcean500;

    & .sidebar__nav-item-icon-wrapper {
      color: tokens.$ifxColorOcean600;
    }

    & .sidebar__nav-item-label {
      outline: none;
      color: tokens.$ifxColorOcean600;
    }

    & .sidebar__nav-item-indicator {
      & .item__arrow-wrapper {
        & ifx-icon {
          color: tokens.$ifxColorOcean600;
        }
      }
    }
  }



  &:hover {
    outline: none;

    & .sidebar__nav-item-icon-wrapper {
      color: tokens.$ifxColorOcean600;
    }

    & .sidebar__nav-item-label {
      outline: none;
      color: tokens.$ifxColorOcean600;
    }

    & .sidebar__nav-item-indicator {
      & .item__arrow-wrapper {
        & ifx-icon {
          color: tokens.$ifxColorOcean600;
        }
      }
    }
  }
}

.sidebar__nav-item {
  display: flex;
  flex-direction: var(--ifx-sidebar-item-flex-direction, row);
  align-items: flex-start;
  width: 100%;
  padding: 8px 0px;
  gap: 4px;
  flex: none;
  order: 0;
  flex-grow: 0;
  text-decoration: none;
  color: tokens.$ifxColorBaseBlack;
  cursor: pointer;
  font-family: var(--ifx-font-family); // tokens.$ifxFontFamilyBody;
  word-break: break-all;


  &.extra-padding__bottom {
    padding: 8px 0px 16px 0px;
  }

  &.active {
    color: tokens.$ifxColorOcean500;
  }

  &.active-section {
    &::before {
      content: "";
      position: absolute;
      left: -32px;
      height: 40px;
      width: 2px;
      background: tokens.$ifxColorOcean500;
      align-self: center;
    }
  }


  &.open {
    padding: 8px 0px;

    & .sidebar__nav-item-label {
      font-size: 16px;
      font-style: normal;
      font-weight: 400;
      line-height: 24px;
    }

    & .sidebar__nav-item-indicator {
      & .item__arrow-wrapper {
        & ifx-icon {
          transform: rotate(-180deg);
        }
      }
    }
  }

  &.header__section {
    box-sizing: padding-box;
    border-top: 1px solid tokens.$ifxColorEngineering200;
    padding: 16px 0px;
    display: -webkit-flex;
    -webkit-line-clamp: 1;
    -webkit-box-orient: horizontal;
    overflow: hidden;
    text-overflow: ellipsis;

    &.no-top-border {
      border-top: none;
    }

    &.active-section {
      &::before {
        content: "";
        position: absolute;
        left: -32px;
        height: 40px;
        width: 2px;
        background: tokens.$ifxColorOcean500;
      }
    }

    &.open {

      padding: 16px 0px 8px 0px;

      & .sidebar__nav-item-indicator {
        & .item__arrow-wrapper {
          & ifx-icon {
            transform: rotate(-180deg);
          }
        }
      }
    }

    & .sidebar__nav-item-label {
      color: tokens.$ifxColorBaseBlack;
      font-family: Source Sans 3;
      font-size: 16px;
      font-style: normal;
      font-weight: 600;
      line-height: 24px;
    }
  }

  &.submenu__item {
    padding: 4px 0px;

    &.extra-padding__bottom {
      padding: 4px 0px 16px 0px;
    }
  }

  & .sidebar__nav-item-icon-wrapper {
    display: flex;
    width: tokens.$ifxSize300;
    height: tokens.$ifxSize300;
    justify-content: center;
    align-items: center;
    gap: tokens.$ifxSpace100;
    flex-shrink: 0;

    &.noIcon {
      display: none;
    }

    & ifx-icon {
      width: tokens.$ifxSize200;
      height: tokens.$ifxSize200;
    }
  }

  & .sidebar__nav-item-label {
    font-style: normal;
    font-weight: 400;
    font-size: tokens.$ifxFontSizeM;
    line-height: tokens.$ifxLineHeightM;
    display: flex;
    align-items: center;
    order: 1;
    flex-grow: 1;
    cursor: pointer;
    display: var(--ifx-sidebar-item-text-display, flex);
  }

  & .sidebar__nav-item-indicator {
    display: var(--ifx-sidebar-item-text-display, flex);
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 0px 4px;
    flex: none;
    order: 2;
    flex-grow: 0;
    position: relative;

    // Collapsed state styling - position indicator over icon
    :host([data-sidebar-collapsed]) & {
      position: absolute;
      top: 0;
      right: 0;
      z-index: 10;
      padding: 0;
    }
  }
}

.expandable__submenu {
  display: none;
  list-style-type: none;
  flex-direction: column;
  padding: 0;
  margin: 0;
  padding-left: 40px;

  &.open {
    display: flex;
  }
}

.header__section+.expandable__submenu {
  padding-left: 0;
}

